--- a/gb/18/11/12/n10847488.md
+++ b/gb/18/11/12/n10847488.md
@@ -1,56 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/woywz155/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/woywz155/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/woywz155/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/woywz155/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>È«Çò³¬¼¶¼ÆËã»ú500Ç¿ ÃÀ¹ú°üÀ¿¹ÚÑÇ¾ü</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-693472268-600x400.jpg" />
-<h6>³¬¼¶¼ÆËãÊÇ·¢Õ¹ºËÎäÆ÷¡¢¼ÓÃÜ¼¼Êõ¡¢µ¼µ¯·ÀÓùºÍÆäËüÏµÍ³µÄ±ØÒª¼¼Êõ¡£Í¼Îª³¬¼¶¼ÆËã»ú×ÊÁÏÍ¼¡£(Morris MacMatzen/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å…¨çƒè¶…çº§è®¡ç®—æœº500å¼º ç¾Žå›½åŒ…æ½å† äºšå†›</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/GettyImages-693472268-600x400.jpg" />
+<h6>è¶…çº§è®¡ç®—æ˜¯å‘å±•æ ¸æ­¦å™¨ã€åŠ å¯†æŠ€æœ¯ã€å¯¼å¼¹é˜²å¾¡å’Œå…¶å®ƒç³»ç»Ÿçš„å¿…è¦æŠ€æœ¯ã€‚å›¾ä¸ºè¶…çº§è®¡ç®—æœºèµ„æ–™å›¾ã€‚(Morris MacMatzen/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2018Äê11ÔÂ13ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÏÄÓê×ÛºÏ±¨µ¼£©11ÔÂ12ÈÕ£¬ÐÂÒ»ÆÚÈ«Çò<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md">³¬¼¶¼ÆËã»ú</a>500Ç¿°ñµ¥ÔÚÃÀ¹ú´ïÀ­Ë¹·¢²¼£¬ÃÀ¹ú³¬¼¶¼ÆËã»ú¡°¶¥µã¡±²õÁª¹Ú¾ü£¬µÚ¶þÃûÒ²ÊÇÃÀ¹ú³¬¼¶¼ÆËã»ú¡£</p>
-<p>ÃÀ¹úÄÜÔ´²¿ÏÂÊôÏðÊ÷Áë¹ú¼ÒÊµÑéÊÒ£¨Oak Ridge National Laboratory£©¿ª·¢µÄ¡°¶¥µã¡±£¨Summit£©ÔÚ½ñÄê6ÔÂ28ÈÕµÄ°ñµ¥ÖÐ£¬¼·ÏÂÖÐ¹ú<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md">³¬¼¶¼ÆËã»ú</a>¡°ÉñÍþ¡¤Ì«ºþÖ®¹â¡±£¬¶á»ØµÚÒ»¡£</p>
-<p>ÔÚ11ÔÂ12ÈÕµÄÐÂ°ñµ¥ÖÐ£¬¡°¶¥µã¡±¸¡µãÔËËãËÙ¶È´Ó°ëÄêÇ°µÄÃ¿Ãë12.23ÒÚÒÚ´ÎÔö¼Óµ½Ã¿Ãë14.35ÒÚÒÚ´Î£¬À©´óÁìÏÈÓÅÊÆ¡£ÓÃÐÐÒµÊõÓïÀ´Ëµ¾ÍÊÇ143.5¸öPetaflops¡£</p>
-<p>ÔÚÉÏÆÚ°ñµ¥ÅÅÃûµÚÈý¡¢ÓÉÃÀÄÜÔ´²¿ÏÂÊôÀÍÂ×Ë¹¡¤Àû¸¥Äª¶û¹ú¼ÒÊµÑéÊÒ£¨Lawrence Livermore National Laboratory£©¿ª·¢µÄ¡°É½¼¹¡±£¨Sierra£©£¬ÌáÉýÒ»Ãû»ñÑ¡ÑÇ¾ü¡£</p>
-<p>¡°É½¼¹¡±Ò²½«Æä¸¡µãÔËËãËÙ¶È´Ó°ëÄêÇ°µÄÃ¿Ãë7.16ÒÚÒÚ´ÎÔö¼Óµ½Ã¿Ãë9.46ÒÚÒÚ´Î¡£¶ø¡°Ì«ºþÖ®¹â¡±µÄ±íÏÖÎª9.3ÒÚÒÚ´Î£¬Õâ²¿³¬¼¶¼ÆËã»úÔøÎ»¾ÓÊÀ½çÉÏ×î¿ìµÄ¼ÆËã»úÁ½ÄêÊ±¼ä£¬Ëæºó±»¡°¶¥µã¡±³¬Ô½£¬ÏÖÔÚÓÖ±»¡°É½¼¹¡±³¬¹ý¡£</p>
-<p>¡°¶¥µã¡±ºÍ¡°É½¼¹¡±¶¼ÊÇIBMµÄ³¬¼¶¼ÆËã»ú£¬²ÉÓÃPower9 CPUºÍNvidia V100 GPU¡£²¢ÓëMellanox¸ßËÙInfinibandÍøÂçÁ¬½Ó¡£ËüÃÇÊÇÓÉÒ»ÅÅÅÅ±ùÏä´óÐ¡µÄ¼ÆËã»ú¹ñ×é³ÉµÄÅÓ´ó»úÆ÷¡£¡°¶¥µã¡±ÓµÓÐ240Íò¸ö´¦ÀíÆ÷ºËÐÄ£¬¡°É½¼¹¡±ÓµÓÐ160Íò¸ö´¦ÀíÆ÷ºËÐÄ¡£</p>
-<p>³¬¼¶¼ÆËã»úÓÃÓÚºËÎäÆ÷µÄÐéÄâ²âÊÔ¡¢·É»úµÄ¿ÕÆø¶¯Á¦Ñ§½¨Ä£¡¢ÑÐ¾¿°©Ö¢ºÍÔ¤²âÆøºò±ä»¯Ó°ÏìµÈÈÎÎñ¡£¡°¶¥µã¡±±»ÊÓÎª¿ÆÑ§½ç½â¾öÄÜÔ´¡¢ÏÈ½ø²ÄÁÏ¡¢ÈË¹¤ÖÇÄÜ¼°ÆäËüÁìÓòµÈÎÊÌâµÄ×îÇ¿´ó¼ÆËã¹¤¾ß¡£</p>
-<p>Å·ÖÞ×îÇ¿´óµÄ³¬¼¶¼ÆËã»úÎ»¾Ó°ñµ¥µÄµÚÎåÎ»£¬ÊÇÎ»ÓÚÈðÊ¿Â¬¼ÓÅµ£¨Lugano£©µÄÈðÊ¿¹ú¼Ò³¬¼¶¼ÆËãÖÐÐÄ£¨Swiss National Supercomputing Centre£¬CSCS£©µÄCray XC50 Piz Daint£¬¸¡µãÔËËãËÙ¶È´ïµ½Ã¿Ãë2.12ÒÚÒÚ´Î¡£Ëü²ÉÓÃIntel Xeon´¦ÀíÆ÷ºÍNvidia Tesla P100 GPU¡£</p>
-<p>ÅÅÃûµÚÆßµÄÊÇÈÕ±¾µÄÈË¹¤ÖÇÄÜÇÅ½ÓÔÆ»ù´¡ÉèÊ©£¨AI Bridging Cloud Infrastructure£¬ABCI£©³¬¼¶¼ÆËã»ú£¬¸Ã¼ÆËã»úÎ»ÓÚ¹ú¼ÒÏÈ½ø¹¤Òµ¿ÆÑ§Óë¼¼ÊõÑÐ¾¿Ëù£¨AIST£©¡£ËüÓÉ¸»Ê¿Í¨¡¢Intel Xeon Gold´¦ÀíÆ÷ºÍNvidia Tesla V100 GPU¹¹½¨£¬¸¡µãÔËËãËÙ¶È´ïµ½Ã¿Ãë1.99ÒÚÒÚ´Î¡£</p>
-<p>ÃÀ¹úÓ¢ÌØ¶û¹«Ë¾Éú²úµÄ´¦ÀíÆ÷ÈÔÈ»ÊÇ³¬¼¶¼ÆËã»úÊ¹ÓÃµÄÖ÷Á÷Ð¾Æ¬£¬ÔÚÉÏ°ñµÄ500Ì¨³¬¼¶¼ÆËã»úÖÐ£¬Ö»ÓÐÈýÌ¨Ê¹ÓÃAMDµÄÐ¾Æ¬¡£</p>
-<p>È«Çò³¬¼¶¼ÆËã»ú500Ç¿°ñµ¥Ê¼ÓÚ1993Äê£¬ÓÉ¹ú¼Ê×éÖ¯¡°Top 500¡±±àÖÆ£¬Ã¿°ëÄê·¢²¼Ò»´Î£¬ÊÇ¸øÈ«ÇòÒÑ°²×°µÄ³¬¼¶¼ÆËã»úÅÅ×ù´ÎµÄÖªÃû°ñµ¥¡£#</p>
-<p>ÔðÈÎ±à¼­£ºÀîÔµ</p>
+<p>ã€å¤§çºªå…ƒ2018å¹´11æœˆ13æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤é›¨ç»¼åˆæŠ¥å¯¼ï¼‰11æœˆ12æ—¥ï¼Œæ–°ä¸€æœŸå…¨çƒ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">è¶…çº§è®¡ç®—æœº</a>500å¼ºæ¦œå•åœ¨ç¾Žå›½è¾¾æ‹‰æ–¯å‘å¸ƒï¼Œç¾Žå›½è¶…çº§è®¡ç®—æœºâ€œé¡¶ç‚¹â€è‰è”å† å†›ï¼Œç¬¬äºŒåä¹Ÿæ˜¯ç¾Žå›½è¶…çº§è®¡ç®—æœºã€‚</p>
+<p>ç¾Žå›½èƒ½æºéƒ¨ä¸‹å±žæ©¡æ ‘å²­å›½å®¶å®žéªŒå®¤ï¼ˆOak Ridge National Laboratoryï¼‰å¼€å‘çš„â€œé¡¶ç‚¹â€ï¼ˆSummitï¼‰åœ¨ä»Šå¹´6æœˆ28æ—¥çš„æ¦œå•ä¸­ï¼ŒæŒ¤ä¸‹ä¸­å›½<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">è¶…çº§è®¡ç®—æœº</a>â€œç¥žå¨Â·å¤ªæ¹–ä¹‹å…‰â€ï¼Œå¤ºå›žç¬¬ä¸€ã€‚</p>
+<p>åœ¨11æœˆ12æ—¥çš„æ–°æ¦œå•ä¸­ï¼Œâ€œé¡¶ç‚¹â€æµ®ç‚¹è¿ç®—é€Ÿåº¦ä»ŽåŠå¹´å‰çš„æ¯ç§’12.23äº¿äº¿æ¬¡å¢žåŠ åˆ°æ¯ç§’14.35äº¿äº¿æ¬¡ï¼Œæ‰©å¤§é¢†å…ˆä¼˜åŠ¿ã€‚ç”¨è¡Œä¸šæœ¯è¯­æ¥è¯´å°±æ˜¯143.5ä¸ªPetaflopsã€‚</p>
+<p>åœ¨ä¸ŠæœŸæ¦œå•æŽ’åç¬¬ä¸‰ã€ç”±ç¾Žèƒ½æºéƒ¨ä¸‹å±žåŠ³ä¼¦æ–¯Â·åˆ©å¼—èŽ«å°”å›½å®¶å®žéªŒå®¤ï¼ˆLawrence Livermore National Laboratoryï¼‰å¼€å‘çš„â€œå±±è„Šâ€ï¼ˆSierraï¼‰ï¼Œæå‡ä¸€åèŽ·é€‰äºšå†›ã€‚</p>
+<p>â€œå±±è„Šâ€ä¹Ÿå°†å…¶æµ®ç‚¹è¿ç®—é€Ÿåº¦ä»ŽåŠå¹´å‰çš„æ¯ç§’7.16äº¿äº¿æ¬¡å¢žåŠ åˆ°æ¯ç§’9.46äº¿äº¿æ¬¡ã€‚è€Œâ€œå¤ªæ¹–ä¹‹å…‰â€çš„è¡¨çŽ°ä¸º9.3äº¿äº¿æ¬¡ï¼Œè¿™éƒ¨è¶…çº§è®¡ç®—æœºæ›¾ä½å±…ä¸–ç•Œä¸Šæœ€å¿«çš„è®¡ç®—æœºä¸¤å¹´æ—¶é—´ï¼ŒéšåŽè¢«â€œé¡¶ç‚¹â€è¶…è¶Šï¼ŒçŽ°åœ¨åˆè¢«â€œå±±è„Šâ€è¶…è¿‡ã€‚</p>
+<p>â€œé¡¶ç‚¹â€å’Œâ€œå±±è„Šâ€éƒ½æ˜¯IBMçš„è¶…çº§è®¡ç®—æœºï¼Œé‡‡ç”¨Power9 CPUå’ŒNvidia V100 GPUã€‚å¹¶ä¸ŽMellanoxé«˜é€ŸInfinibandç½‘ç»œè¿žæŽ¥ã€‚å®ƒä»¬æ˜¯ç”±ä¸€æŽ’æŽ’å†°ç®±å¤§å°çš„è®¡ç®—æœºæŸœç»„æˆçš„åºžå¤§æœºå™¨ã€‚â€œé¡¶ç‚¹â€æ‹¥æœ‰240ä¸‡ä¸ªå¤„ç†å™¨æ ¸å¿ƒï¼Œâ€œå±±è„Šâ€æ‹¥æœ‰160ä¸‡ä¸ªå¤„ç†å™¨æ ¸å¿ƒã€‚</p>
+<p>è¶…çº§è®¡ç®—æœºç”¨äºŽæ ¸æ­¦å™¨çš„è™šæ‹Ÿæµ‹è¯•ã€é£žæœºçš„ç©ºæ°”åŠ¨åŠ›å­¦å»ºæ¨¡ã€ç ”ç©¶ç™Œç—‡å’Œé¢„æµ‹æ°”å€™å˜åŒ–å½±å“ç­‰ä»»åŠ¡ã€‚â€œé¡¶ç‚¹â€è¢«è§†ä¸ºç§‘å­¦ç•Œè§£å†³èƒ½æºã€å…ˆè¿›ææ–™ã€äººå·¥æ™ºèƒ½åŠå…¶å®ƒé¢†åŸŸç­‰é—®é¢˜çš„æœ€å¼ºå¤§è®¡ç®—å·¥å…·ã€‚</p>
+<p>æ¬§æ´²æœ€å¼ºå¤§çš„è¶…çº§è®¡ç®—æœºä½å±…æ¦œå•çš„ç¬¬äº”ä½ï¼Œæ˜¯ä½äºŽç‘žå£«å¢åŠ è¯ºï¼ˆLuganoï¼‰çš„ç‘žå£«å›½å®¶è¶…çº§è®¡ç®—ä¸­å¿ƒï¼ˆSwiss National Supercomputing Centreï¼ŒCSCSï¼‰çš„Cray XC50 Piz Daintï¼Œæµ®ç‚¹è¿ç®—é€Ÿåº¦è¾¾åˆ°æ¯ç§’2.12äº¿äº¿æ¬¡ã€‚å®ƒé‡‡ç”¨Intel Xeonå¤„ç†å™¨å’ŒNvidia Tesla P100 GPUã€‚</p>
+<p>æŽ’åç¬¬ä¸ƒçš„æ˜¯æ—¥æœ¬çš„äººå·¥æ™ºèƒ½æ¡¥æŽ¥äº‘åŸºç¡€è®¾æ–½ï¼ˆAI Bridging Cloud Infrastructureï¼ŒABCIï¼‰è¶…çº§è®¡ç®—æœºï¼Œè¯¥è®¡ç®—æœºä½äºŽå›½å®¶å…ˆè¿›å·¥ä¸šç§‘å­¦ä¸ŽæŠ€æœ¯ç ”ç©¶æ‰€ï¼ˆAISTï¼‰ã€‚å®ƒç”±å¯Œå£«é€šã€Intel Xeon Goldå¤„ç†å™¨å’ŒNvidia Tesla V100 GPUæž„å»ºï¼Œæµ®ç‚¹è¿ç®—é€Ÿåº¦è¾¾åˆ°æ¯ç§’1.99äº¿äº¿æ¬¡ã€‚</p>
+<p>ç¾Žå›½è‹±ç‰¹å°”å…¬å¸ç”Ÿäº§çš„å¤„ç†å™¨ä»ç„¶æ˜¯è¶…çº§è®¡ç®—æœºä½¿ç”¨çš„ä¸»æµèŠ¯ç‰‡ï¼Œåœ¨ä¸Šæ¦œçš„500å°è¶…çº§è®¡ç®—æœºä¸­ï¼Œåªæœ‰ä¸‰å°ä½¿ç”¨AMDçš„èŠ¯ç‰‡ã€‚</p>
+<p>å…¨çƒè¶…çº§è®¡ç®—æœº500å¼ºæ¦œå•å§‹äºŽ1993å¹´ï¼Œç”±å›½é™…ç»„ç»‡â€œTop 500â€ç¼–åˆ¶ï¼Œæ¯åŠå¹´å‘å¸ƒä¸€æ¬¡ï¼Œæ˜¯ç»™å…¨çƒå·²å®‰è£…çš„è¶…çº§è®¡ç®—æœºæŽ’åº§æ¬¡çš„çŸ¥åæ¦œå•ã€‚#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæŽç¼˜</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/18/11/12/n10847488.htm">È«Çò³¬¼¶¼ÆËã»ú500Ç¿ ÃÀ¹ú°üÀ¿¹ÚÑÇ¾ü</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/18/10/7/n10766965.htm">IBMÉè¼ÆÐÂµçÄÔ ´¦ÀíËÙ¶ÈÌáÉý¶þ°Ù±¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/3/n10532105.htm">³¬¼¶µçÄÔ¿É¸Ä±äÊÀ½çµÄÎå´óÓÃÍ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/3/n10534684.htm">ÃÀ¹â¿Ø¸æÖÐÆóÇÔÖªÊ¶²úÈ¨ ·´ÔâÖÐ¹²·¨Í¥´¦·£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/28/n10520249.htm">ÖÐ¹úÖÆÉãÏñÍ·³ö¿ÚÎ÷·½ ÓÃ»§»³ÒÉ²ØÖÐ¹²¼à¿Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/26/n10513841.htm">È«Çò³¬¼¶¼ÆËã»ú500Ç¿ ÃÀ¹ú¸ô5ÄêÖØ»Ø°ñÊ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/7/n10283550.htm">ÂíË¹¿Ë¾¯¸æ£ºAI »ò½«³ÉÎªÈËÀàÎÞ·¨ÌÓÍÑµÄ²»¸¯¶À²ÃÕß</a></li>
-> <li><a href="https://github.com/woywz155/djy/blob/master/gb/18/6/8/n10468335.md">ÃÀ¹ú´ÓÖÐ¹úÊÖÖÐ¶á»Ø³¬¼¶¼ÆËã»úÍõ¹Ú</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11572528.htm">ÖÐ¹²¼ÓËÙ¹«Ë½ºÏÓª ÃñÆóÕý±»È«·½Î»¼·Ñ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11579807.htm">¡¾·­Ç½±Ø¿´¡¿Ïã¸Û¡°ÌìÃðÖÐ¹²¡±±êÓïÁîÖÐ¹²É¥µ¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580036.htm">´¨ÆÕ·¢±íÉË¸ÐÌ¸»° Í¸Â¶µ±×ÜÍ³×îÄÑ×öµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11579512.htm">Ïã¸Û±ä´óÂ½£¿Íâ½ç·ÖÎöÖÐ¹²¿ØÖÆÏã¸ÛÁ½Ä£Ê½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/29/n11554590.htm">Ô¤ÑÔÖÐµÄÖÐ¹²ÃðÍöÊ±¼ä¼°Ç°ºóÖØ´óÊÂ¼þ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/4/n11568273.htm">±»Çú½âµÄ³ÉÓï£ºñºñ»ÊçÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11563658.htm">´«Ææ²ÅÅ®ÕÅ°®ÁáÌÓµ½Ïã¸ÛµÄÇ°Ç°ºóºó£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11539994.htm">¿µÎõ»ÊµÛÐ´µÃÒ»ÊÖºÃ×Ö ÓÐÊ²Ã´ÇÏÃÅ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578774.htm">±©Ñ©ÓéÀÖÏòÖÐ¹²ßµÍ· È«ÇòÓÎÏ·ÉçÍÅÈºÆðµÖÖÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577528.htm">·ÖÎö£ºÁõº×´Ë´Î¸°ÃÀµÄÈý¸ö²»Ñ°³£Ö®´¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577291.htm">¡¾ÅÄ°¸¾ªÆæ¡¿NBA×Ü²Ã×ªÇ¿Ó² ´¨ÆÕÔÙÍ¦Ïã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11579606.htm">¡¾ÅÄ°¸¾ªÆæ¡¿´óÂ½ÈË·­Ç½Ì¸NBAÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580971.htm">ºÃÀ³Îë´ó½±»ñµÃÕß Ò»Î»±±¾©ÇàÄêµÄÒôÀÖÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/8/n11576651.htm">¡¶À¶²¨£º×îºóÒ»µÎÑª¡·Ó°ÆÀ£ºÒ»´ú´«ÆæÍêÃÀÐ»Ä»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578053.htm">ÖÓÐÀÁèÇÃÏì½ðÖÓºó ÏÂ²¿Ï·½«ÓëÍõÉÙÎ°ÑÝÄ¸×Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/8/n11576766.htm">·¶±ù±ù¸ßÔÆÏèºÏÅÄ¾ç»»½ÇÖØÅÄ ÌÆæÌ·ñÈÏµ£Å®Ö÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578789.htm">·¶±ù±ùÏÖÉíÅ¦Ô¼½ÖÍ· ÏÞÖÆ³ö¾³ÒÉ½â³ý</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/7/n10766965.md#1">IBMè®¾è®¡æ–°ç”µè„‘ å¤„ç†é€Ÿåº¦æå‡äºŒç™¾å€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/7/3/n10532105.md#1">è¶…çº§ç”µè„‘å¯æ”¹å˜ä¸–ç•Œçš„äº”å¤§ç”¨é€”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/7/3/n10534684.md#1">ç¾Žå…‰æŽ§å‘Šä¸­ä¼çªƒçŸ¥è¯†äº§æƒ åé­ä¸­å…±æ³•åº­å¤„ç½š</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/28/n10520249.md#1">ä¸­å›½åˆ¶æ‘„åƒå¤´å‡ºå£è¥¿æ–¹ ç”¨æˆ·æ€€ç–‘è—ä¸­å…±ç›‘æŽ§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/26/n10513841.md#1">å…¨çƒè¶…çº§è®¡ç®—æœº500å¼º ç¾Žå›½éš”5å¹´é‡å›žæ¦œé¦–</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/4/7/n10283550.md#1">é©¬æ–¯å…‹è­¦å‘Šï¼šAI æˆ–å°†æˆä¸ºäººç±»æ— æ³•é€ƒè„±çš„ä¸è…ç‹¬è£è€…</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/woywz155/djy/blob/master/gb/18/11/12/n10847488.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/woywz155/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/woywz155/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">æ¾³åŒ»å­¦åä¼šè¥¿æ¾³ä¸»å¸­ï¼šå­¦æ ¡å°†å…³é—­</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">é«˜å¤©éŸµï¼šé”¡ç›–ç‰¹åšç‰©é¦† å”¤é†’ç½—é©¬å°¼äºšçš„è®°å¿†</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">ä¿®ç‚¼äººçš„æ•…äº‹ï¼šä»Žåœ°ç‹±åˆ°å¤©å ‚</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/18/11/12/n10847488.htm">å…¨çƒè¶…çº§è®¡ç®—æœº500å¼º ç¾Žå›½åŒ…æ½å† äºšå†›</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/11/12/n10847488.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
